...
        
        presenter = MovieQuizPresenter(
            viewController: self,
            questionFactory: questionFactory,
            statisticService: statisticService
        )
        loadIndicatorView.accessibilityIdentifier = "loadIndicator"
        updateLoadingState(isLoading: true)
    }
 
    //MARK: - AlertPresenterDelegate
    func presentAlert(_ alert: UIAlertController) {
        present(alert, animated: true, completion: nil)
...
